fix: edit button column shift

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,7 +3,7 @@
     margin: 23px 0 0 30px;
     display: grid;
     max-width: 336px;
-    grid-template-columns: 1fr auto;
+    grid-template-columns: auto auto;
     grid-template-rows: 1fr 1fr;
     row-gap: 7px;
 
